handle webaudio context being suspended and resume on interaction

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -25,6 +25,11 @@
   transform-origin: left;
 }
 
+.transform-center-y {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .animation-opacity-pulse {
   animation-duration: 350ms;
   animation-iteration-count: infinite;
